@@ -1,17 +1,18 @@
 package mate.academy.spring.controller;
 
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 import mate.academy.spring.dto.response.OrderResponseDto;
 import mate.academy.spring.model.Order;
-import mate.academy.spring.model.ShoppingCart;
+import mate.academy.spring.model.User;
 import mate.academy.spring.service.OrderService;
 import mate.academy.spring.service.ShoppingCartService;
 import mate.academy.spring.service.UserService;
 import mate.academy.spring.service.mapper.ResponseDtoMapper;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -32,17 +33,23 @@ public class OrderController {
         this.orderResponseDtoMapper = orderResponseDtoMapper;
     }
 
-    @PostMapping("/complete")
-    public OrderResponseDto completeOrder(@RequestParam Long userId) {
-        ShoppingCart cart = shoppingCartService.getByUser(userService.get(userId));
-        return orderResponseDtoMapper.mapToDto(orderService.completeOrder(cart));
+    public OrderResponseDto completeOrder(Authentication authentication) {
+        String userName = authentication.getName();
+        User user = userService.findByEmail(userName).orElseThrow(() ->
+                new NoSuchElementException("Can't find user with email: "
+                        + authentication.getName()));
+        return orderResponseDtoMapper.mapToDto(orderService.completeOrder(
+                shoppingCartService.getByUser(user)));
     }
 
     @GetMapping
-    public List<OrderResponseDto> getOrderHistory(@RequestParam Long userId) {
-        return orderService.getOrdersHistory(userService.get(userId))
+    public List<OrderResponseDto> getOrderHistory(Authentication authentication) {
+        User user = userService.findByEmail(authentication.getName()).orElseThrow(() ->
+                new NoSuchElementException("Can't find user with email: "
+                        + authentication.getName()));
+        return orderService.getOrdersHistory(user)
                 .stream()
                 .map(orderResponseDtoMapper::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
